Fix nav button not clickable on mobile, fix top search form not wrap, add missing headers ategories feature.

--- a/public/css/characloud.css
+++ b/public/css/characloud.css
@@ -32,6 +32,7 @@
 #characloud_search_form {
 	opacity: 0;
 	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	justify-content: center;
 
@@ -1144,12 +1145,18 @@
 }
 
 #header_categories {
-    display: inline-block;
+	display: inline-flex;
+	flex-wrap: wrap;
+
+	padding: 0.5rem;
+	gap: 0.5rem;
 }
 
 #header_categories .header-category {
-    display: inline-block;
-    background-color: #56687b;
+	margin: 0px;
+
+	display: inline-block;
+	background-color: #56687b;
 }
 
 .category-remove {
