--- a/public/designs/classic.css
+++ b/public/designs/classic.css
@@ -875,7 +875,7 @@ input[type="button"] {
 	padding: 1rem;
 	max-height: 100%;
 	position: absolute;
-	z-index: 2050;
+	/* z-index: 2050; */
 	-webkit-user-select: none;
 	-webkit-touch-callout: none;
 	-moz-user-select: none;
